--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -69,6 +69,7 @@
     }
     .dropdown-menu{
       background-color:	#D3D3D3;
+      width: 40px;
     }
     ::placeholder {
       color: #d3d3d3;
@@ -102,9 +103,6 @@
     .fa{
       padding-right: 5px;
       padding-left: 5px;
-    }
-    .dropdown-menu{
-      width: 40px;
     }
   </style>
 </head>
@@ -152,8 +150,8 @@
           <span class="slider"></span>
         </label>
         </div>
+     </div>
     </div>
-  </div>
 
     <div style="width:10%; float:left;">
       <div class="input-group clockpicker pull-center" data-placement="bottom" data-align="top" data-autoclose="true">
@@ -169,9 +167,9 @@
         <i class="fa fa-search"></i>Search ClassMaps
       </button>
       </div>
-</form>
+  </form>
 
-  <div style="float: right; width: 10%; margin: auto;">
+  <div style="float: right; margin: auto;">
     <p style="color: #ffffff;">Welcome, {{netid}}</p>
     <button class="astext" id="Logout">
         Sign Out
