--- a/classes/templates/classes/index.html
+++ b/classes/templates/classes/index.html
@@ -214,6 +214,7 @@
  <!-- overlay div ends -->
 <!--  script for sidebar  -->
  <script>
+   document.getElementById("mySidenav").style.width = "250px";
 function openNav() {
     document.getElementById("mySidenav").style.width = "250px";
 }
